--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <% include partials/header.ejs %>
 
-<h1> I m ready to move ahead</h1>
+<div class="square">
+    <h1>This is a Square</h1>
+</div>
 
 <% include partials/footer.ejs %>
