--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,20 @@
 <% include partials/header.ejs %>
+<div class="container">
+  <div class="row">
 
-<div class="square">
-    <h1>This is a Square</h1>
+        <div class="col-sm">
+                <div class="square">
+                        <h1>This is a Square</h1>
+                    </div>
+              </div>
+       
+              <div class="col-sm">
+                    <div class="square">
+                            <h1>This is a Square</h1>
+                        </div>
+                  </div>
+
+</div>
 </div>
 
 <% include partials/footer.ejs %>
