--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,8 +14,14 @@
           
           <input type='password' class="input-group-text" placeholder = 'Password' name='psd' pattern=".{3,15}" required title="3 characters minimum and 15 maximum">
           </div>
+          <div>
           <input type="submit" class="btn btn-success">
+        </div>
+        
   </form>
+  <div>
+    <a href="/fogotpsd"><button class="btn btn-warning">Forgot Password!</button></a>
+  </div>
 </div>
     </div>
   </div>
