--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,13 +2,14 @@
 <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>StockFin</title>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css">
     <link rel="stylesheet" href="/navb.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <script
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script> 
+  crossorigin="anonymous"></script>
+   
   </head>
 <body>
 
@@ -38,9 +39,8 @@
               </div>
             <li>
                 <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search"  placeholder="Search Company" aria-label="Search"></input>
-                <button class="btn btn-outline-dark" style="color:white" type="submit">Search</button>
-              </form> 
+                  <select class="form-control selectpicker" data-live-search="true" id="stockname" placeholder="search company"></select>
+                           </form> 
             </li>
 
           </ul>
@@ -58,3 +58,34 @@
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form> -->
+
+      <script>
+          var stocksname = '';
+
+$.ajax({
+url:"http://localhost:3000/getstockname",
+type:"GET",
+dataType: 'json',
+data:{},
+headers: {
+'Content-Type':'application/json'
+},
+success:function(data) {
+
+
+console.log(data);
+
+data.companyarray.map(function(e){
+  stocksname +='<option value="'+e.bse+'">'+e.sharename+'</option>'
+})
+
+$('#stockname').append(stocksname);
+$('#stockname').selectpicker('refresh');
+
+      }
+
+});
+
+
+
+      </script>
