--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,8 +38,9 @@
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
             <li>
-                <form class="form-inline">
-                  <select class="form-control selectpicker" data-live-search="true" id="stockname" placeholder="search company"></select>
+                <form class="form-inline" method="get" action="/stocks" >
+                  <select class="form-control selectpicker" data-live-search="true" id="stockname" placeholder="search company" name="bse"></select>
+                  <button placeholder="search" id="searchcompany">SEARCH</button>
                            </form> 
             </li>
 
@@ -68,7 +69,7 @@ type:"GET",
 dataType: 'json',
 data:{},
 headers: {
-'Content-Type':'application/json'
+'Content-Type':'application/json' 
 },
 success:function(data) {
 
@@ -85,6 +86,7 @@ $('#stockname').selectpicker('refresh');
       }
 
 });
+
 
 
 
