--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,13 +6,13 @@
 <div class='labels' align='center'>
     <div class="labelsplash">
       
-    <form>
+    <form method="POST" action="/login">
            <div>
-            <input type="email"  class="input-group-text" placeholder='Username' name ="gmail" requird>
+            <input type="email"  class="input-group-text" placeholder='Username' name ="username" requird>
           </div>
           <div>
           
-          <input type='password' class="input-group-text" placeholder = 'Password' name='psd' pattern=".{3,15}" required title="3 characters minimum and 15 maximum">
+          <input type='password' class="input-group-text" placeholder = 'Password' name='password' pattern=".{3,15}" required title="3 characters minimum and 15 maximum">
           </div>
           <div>
           <input type="submit" class="btn btn-success">
