--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,8 +3,9 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>StockFin</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css">
-    <link rel="stylesheet" href="/navb.css">
+    <link rel="stylesheet" href="/navb.css"> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
     <script
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -13,8 +14,8 @@
   </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <span class="navbar-brand" href="/"><img src="https://pbs.twimg.com/profile_images/1028664054519279616/0w5yQ1Gk_400x400.jpg" width="35%"></span>
+    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
+        <span class="navbar-brand" href="/"><img src="https://pbs.twimg.com/profile_images/1028664054519279616/0w5yQ1Gk_400x400.jpg" width="35%" style="border-radius:50%"></span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,10 +41,14 @@
              </ul> <ul class="nav navbar-nav ml-auto">
 
               <li>
-                <form class="form-inline my-2 my-lg-0" method="GET" action="/stocks">
-                  <select class="selectpicker" id="stockname" data-live-search="true" name="username"></select>
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
+               
+<div class="ui search" style="float:left">
+  <div class="ui icon input">
+    <input class="prompt" type="text" placeholder="Search companies...">
+    <i class="search icon"></i>
+  </div>
+  <div class="results"></div>
+</div> 
               </li>
 
             
@@ -53,38 +58,8 @@
          
 <!-- 
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form> -->
 
-      <script>
-          var stocksname = '';
-
-$.ajax({
-url:location.origin+"/getstockname",
-type:"GET",
-dataType: 'json',
-data:{},
-headers: {
-'Content-Type':'application/json' 
-},
-success:function(data) {
-
-
-console.log(data);
-
-data.companyarray.map(function(e){
-  stocksname +='<option value="'+e.bse+'">'+e.sharename+'</option>'
-})
-
-$('#stockname').append(stocksname);
-$('#stockname').selectpicker('refresh');
-
-      }
-
-});
-
-
-
-
-      </script>
+    
