--- a/styles/navb.css
+++ b/styles/navb.css
@@ -18,13 +18,15 @@
     }
 }
 .square {
-    background: rgb(38, 120, 226);
+    background:rgba(6,5,5,0.1);
+   
     height:40%
 }
-
-.labels{
-    border: 5px solid rgb(38, 120, 226);
-    padding:3% 0%;
-   
+body {
+    background-image: url("http://oxycare.com.tr/wp-content/uploads/2017/11/oxycare-mobile-hospital-bg-02.jpg");
+    background-repeat: no-repeat;
+}
+table a{
+    color:#c34100;
 }
 
