--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,23 +1,50 @@
 <% include partials/header.ejs %>
 <% include partials/middle.ejs %>
- 
+<div class="container">
 <div class="loginpage">
-  
-<div class='labels' align='center'>
-    <div class="labelsplash">
-      
-    <form action="/register" method="POST">
-     <div>
-    <input type="email" class="input-group-text" placeholder='Username' name ="email" requird>
-  </div><div>   
- 
-  <input type='password' class="input-group-text" placeholder = 'Password' name='password' pattern=".{3,15}" required title="3 characters minimum and 15 maximum">
-  </div>
-  
-    <input type="submit" class="btn btn-success">
-  </form>
-</div>
+ <div class="container-fluid">
+<div id="login">
+    <h3 class="text-center text-white pt-5"></h3>
+    <div class="container">
+        <div id="login-row" class="row justify-content-center align-items-center">
+            <div id="login-column" class="col-md-6" style="border: 2px solid #4e7e80;border-radius: 25%;">
+                <div id="login-box" class="col-md-12" >
+                    <form id="login-form" class="form" action="/login" method="POST">
+                        <h2 class="text-center text-secondary">Sign Up</h2>
+                        <div class="form-group">
+                            <label for="username" class="text-secondary">Email-id:</label><br>
+                            <input type="text" name="username" id="username" class="form-control"required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="text-secondary">Password:</label><br>
+                            <input type="password" name="password" id="password" class="form-control" required>
+                        </div>
+                            <div class="form-group">
+                            <label for="password" class="text-secondary">Confirm Password:</label><br>
+                            <input type="password" name="password" id="password" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                           <center><input type="submit" name="submit" class="btn btn-secondary btn-md" value="Submit"></center>
+                            
+                        </div>
+                        
+                        <div class="form-group form-inline row">
+                            <div id="register-link" class="text-left">
+                            
+                           
+                        </div>
+                        <div class="col-md-6"></div>
+                        <div id="register-link" style="text-align: center">
+                        
+                        </div>
+                        </div>
+                        
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
+</div>
 
 <% include partials/footer.ejs %>
