--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,7 @@
             dataType: 'json',
             data:{},
             success:function(data) {
+                  console.log(data);
                   var str ="Series"
               for(key in data){
                     if(key.includes(str)){
