--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@ sensexvalue();
 setInterval(sensexvalue,100000);
 function gettoday(){
     var today = new Date();
-    var dd = today.getDate()-1;
+    var dd = today.getDate();
     var mm = today.getMonth()+1; //January is 0!
     var yyyy = today.getFullYear();
     
