--- a/views/analysis.ejs
+++ b/views/analysis.ejs
@@ -6,12 +6,12 @@
 <div class="container">
     
         <div style="text-align: center;padding-top:2%;padding-bottom:4%"><button id="addfilter" class="positive ui button" style:"position: absolute;">ADD Filter</button></div>
-   <div class-"filterpouch">     
+   <div class="filterpouch">     
     
          
     </div>
     
-     <div style="text-align: center;padding-top:2%;padding-bottom:4%"><button id="submitfilter" class="positive ui button" style="position: absolute;">Submit</button></div>
+     <div style="text-align: center;padding-top:2%;padding-bottom:4%"><button id="submitfilter" class="positive ui button">Submit</button></div>
     <hr>
     
     <div class="row">
@@ -36,39 +36,20 @@
     
     $('#addfilter').on('click',function(){
          count++;
-          $('.row').append('
-          <div class="row" id="row'+count+'value">
-        
-        <div class="col-md-5 filteroption" >
-        
-        <select class="ui fluid  dropdown" id="filters'+count+'row"><option>Price Range</option><option>EPS</option><option>Sales</option><option>Face-Value</option><option>Equity</option><option>Net-Profit</option></select>
-            </div>
-      <div class="col-md-1"></div>
-          <div class="col-md-5" id="slideradded">
-            <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;"></p><span id="slider-range'+count+'"></span>
-            </div>
-      </div>
-    
-          
-          
-          
-          
-          ')    
-        $('#filters').append('');
-        $('#slideradded').append('');
+          $('.filterpouch').append('<div class="row" id="row'+count+'value"><div class="col-md-5 filteroption" ><select class="ui fluid  dropdown" id="filters'+count+'row"><option>Price Range</option><option>EPS</option><option>Sales</option><option>Face-Value</option><option>Equity</option><option>Net-Profit</option></select></div><div class="col-md-1"></div><div class="col-md-2"><input type="text" id="amount'+count+'" readonly style="border:0; color:#1f69f6; font-weight:bold;"></div><div id="slider-range'+count+'" class="col-md-4"></div></div>');    
         
          $( function() {
-		$( "#slider-range" ).slider({
+		$( "#slider-range"+count).slider({
 			range: true,
 			min: 0,
 			max: 500,
 			values: [ 75, 300 ],
 			slide: function( event, ui ) {
-				$( "#amount" ).val( "$" + ui.values[ 0 ] + " - $" + ui.values[ 1 ] );
+				$( "#amount"+count ).val( "$" + ui.values[ 0 ] + " - $" + ui.values[ 1 ] );
 			}
 		});
-		$( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 ) +
-			" - $" + $( "#slider-range" ).slider( "values", 1 ) );
+		$( "#amount"+count ).val( "$" + $( "#slider-range"+count ).slider( "values", 0 ) +
+			" - $" + $( "#slider-range"+count ).slider( "values", 1 ) );
 	} );
          
     
@@ -77,7 +58,59 @@
     })
     
     
-    	
+    $('#submitfilter').on("click",function(){
+        
+        var linkadded="";
+        for(var i=1;i<=count;i++){
+           
+           if($('#filters'+count+'row').val()=='Price Range'){
+               
+               linkadded+="pricerangestart="+$('#slider-range'+count).slider("values",0)+"&pricerangeend="+$('#slider-range'+count).slider("values",1);
+               console.log(linkadded);
+           }
+           else if($('#filters'+count+'row').val()=='EPS'){
+               linkadded+="epsstart="+$('#slider-range'+count).slider("values",0)+"&epsend="+$('#slider-range'+count).slider("values",1);
+               
+           }
+           else if($('#filters'+count+'row').val()=='Sales'){
+               linkadded+="salesstart="+$('#slider-range'+count).slider("values",0)+"&salesend="+$('#slider-range'+count).slider("values",1);
+           }
+           else if($('#filters'+count+'row').val()=='Face-Value'){
+               linkadded+="facevaluestart="+$('#slider-range'+count).slider("values",0)+"&facevalueend="+$('#slider-range'+count).slider("values",1);
+           }
+           else if($('#filters'+count+'row').val()=='Equity'){
+               linkadded+="equitystart="+$('#slider-range'+count).slider("values",0)+"&equityend="+$('#slider-range'+count).slider("values",1);
+           }
+            
+            linkadded+="&"
+            
+        }
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+           $.ajax({
+            url:location.origin+"/api/filter?"+linkadded ,
+            type:"GET",
+            dataType: 'json',
+            data:{},
+            success:function(data) {
+                  console.log(data);
+                  
+                  
+       
+       
+            
+                            }
+                                                     });
+        
+    })	
 
 	    
 	  
