--- a/views/analysis.ejs
+++ b/views/analysis.ejs
@@ -14,15 +14,8 @@
      <div style="text-align: center;padding-top:2%;padding-bottom:4%"><button id="submitfilter" class="positive ui button">Submit</button></div>
     <hr>
     
-    <div class="row">
-     <div class="card border-success mb-3" style="max-width: 18rem;">
-  <div class="card-header bg-transparent border-success">Header</div>
-  <div class="card-body text-success">
-    <h5 class="card-title">Success card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  <div class="card-footer bg-transparent border-success">Footer</div>
-</div>
+    <div class="row" id="filteredddata">
+    
         
         
     </div>
@@ -105,6 +98,13 @@
                   
                   console.log(data);
                   
+                  data.forEach(function(bsecodedata){
+                      
+                        $('#filtereddata').append(' <div class="card border-success mb-3" style="max-width: 18rem;"><div class="card-header bg-transparent border-success">'+bsecodedata.bsecode+'</div><div class="card-body text-success"><h5 class="card-title">Success card title</h5><p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></div><div class="card-footer bg-transparent border-success">Footer</div></div>');
+                      
+                  })
+                  
+               
 
                   
                   
