--- a/styles/navb.css
+++ b/styles/navb.css
@@ -23,7 +23,7 @@
     height:40%
 }
 body {
-    background-image: url("http://oxycare.com.tr/wp-content/uploads/2017/11/oxycare-mobile-hospital-bg-02.jpg");
+    background-image: url("https://i.ytimg.com/vi/KFNxdXEe0Ko/maxresdefault.jpg");
     background-repeat: no-repeat;
 }
 table a{
