--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,18 +33,15 @@ crossorigin="anonymous"></script>
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="/profile">Profile</a>
             </li>
+            
+            <li class="nav-item">
+
+                <a class="nav-link" href="/analysis">Analyze</a>
+              </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
+             
              </ul> <ul class="nav navbar-nav ml-auto">
 
               <li>
