--- a/views/analysis.ejs
+++ b/views/analysis.ejs
@@ -47,11 +47,15 @@
 		});
 		$( "#amount"+count ).val( "₹" + $( "#slider-range"+count ).slider( "values", 0 ) +
 			" - ₹" + $( "#slider-range"+count ).slider( "values", 1 ) );
-	} );
+    } );
          
     
     
     
+    })
+
+    $('select').on('change',function(){
+        console.log(val);
     })
     
     
@@ -60,24 +64,25 @@
          $('#filtereddata').children().remove();
         var linkadded="";
         for(var i=1;i<=count;i++){
-           
-           if($('#filters'+count+'row').val()=='Price Range'){
+            console.log(count);
+           console.log($('#filters'+count+'row').val());
+           if($('#filters'+i+'row').val()=='Price Range'){
                
-               linkadded+="pricerangestart="+$('#slider-range'+count).slider("values",0)+"&pricerangeend="+$('#slider-range'+count).slider("values",1);
+               linkadded+="pricerangestart="+$('#slider-range'+i).slider("values",0)+"&pricerangeend="+$('#slider-range'+i).slider("values",1);
                console.log(linkadded);
            }
-           else if($('#filters'+count+'row').val()=='EPS'){
-               linkadded+="epsstart="+$('#slider-range'+count).slider("values",0)+"&epsend="+$('#slider-range'+count).slider("values",1);
+           else if($('#filters'+i+'row').val()=='EPS'){
+               linkadded+="epsstart="+$('#slider-range'+i).slider("values",0)+"&epsend="+$('#slider-range'+i).slider("values",1);
                
            }
-           else if($('#filters'+count+'row').val()=='Sales'){
-               linkadded+="salesstart="+$('#slider-range'+count).slider("values",0)+"&salesend="+$('#slider-range'+count).slider("values",1);
+           else if($('#filters'+i+'row').val()=='Sales'){
+               linkadded+="salesstart="+$('#slider-range'+i).slider("values",0)+"&salesend="+$('#slider-range'+i).slider("values",1);
            }
-           else if($('#filters'+count+'row').val()=='Face-Value'){
-               linkadded+="facevaluestart="+$('#slider-range'+count).slider("values",0)+"&facevalueend="+$('#slider-range'+count).slider("values",1);
+           else if($('#filters'+i+'row').val()=='Face-Value'){
+               linkadded+="facevaluestart="+$('#slider-range'+i).slider("values",0)+"&facevalueend="+$('#slider-range'+i).slider("values",1);
            }
-           else if($('#filters'+count+'row').val()=='Equity'){
-               linkadded+="equitystart="+$('#slider-range'+count).slider("values",0)+"&equityend="+$('#slider-range'+count).slider("values",1);
+           else if($('#filters'+i+'row').val()=='Equity'){
+               linkadded+="equitystart="+$('#slider-range'+i).slider("values",0)+"&equityend="+$('#slider-range'+i).slider("values",1);
            }
             
             linkadded+="&"
@@ -95,7 +100,7 @@
         
         
            $.ajax({
-            url:location.origin+"/api/filter?"+linkadded ,
+            url:location.origin+"/api/filter?"+linkadded+'count='+count,
             type:"GET",
             dataType: 'json',
             data:{},
